--- a/about.html
+++ b/about.html
@@ -16,79 +16,132 @@
 </head>
 
 <body>
-  <h1 id="komo"><u>WHO WE ARE</u></h1>
-  <!-- <div class="container"> -->
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-
-      <div class="item active">
-        <img src="img/o.jpeg" alt="Los Angeles" style="width:100%;"id="pik">
-        <div class="carousel-caption">
-          <h3>GAME CITY</h3>
-          <p>GAME CITY DEVELOPERS</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="img/f.jpeg" alt="Chicago" style="width:100%;"id="pik">
-        <div class="carousel-caption">
-          <h3>GAME CITY</h3>
-          <p>GAME CITY DEVELOPERS</p>
-        </div>
-      </div>
-
-      <div class="item">
-        <img src="img/n.jpeg" alt="New York" style="width:100%;"id="pik">
-        <div class="carousel-caption">
-          <h3> GAME CITY</h3>
-          <p>GAME CITY DEVELOPERS</p>
-        </div>
-      </div>
-
+  <nav class="navbar navbar-default navbar-fixed-top"id="pit">
+  <div class="container-fluid">
+    <div class="navbar-header"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">GAME CITY</a>
     </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Games <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+          <li>  <a class="dropdown-item" href="game3.html">Angry Birds</a></li>
+          <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
+         <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
+         <li> <a class="dropdown-item" href="game1.html">Fifa 18</a></li>
+         <li> <a class="dropdown-item" href="#">Word Cross</a></li>
+         <li> <a class="dropdown-item" href="#">Subway Surfers</a></li>
+         <li> <a class="dropdown-item" href="#">Clash Royale</a></li>
+         <li> <a class="dropdown-item" href="#">Nba2K18</a></li>
+         <li> <a class="dropdown-item" href="#">8 Ball Pool</a></li>
 
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      </ul>
+      <li><a href="about.html">About us</a></li>
+              <li><a href="#">Support</a></li>
+    </div>
+  </div>
+</nav>
+<br><br>
+  <div class="jumbotron" id="dip">
+    <background-image: url( "t.png");>
+      <h1 id="komo">WHO WE ARE</h1>
+      <!-- <div class="container"> -->
+
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+
+          <div class="item active">
+            <img src="img/w.jpeg" alt="Los Angeles" style="width:100%;" id="pik">
+            <div class="carousel-caption">
+              <h3>GAME CITY</h3>
+              <p>GAME CITY DEVELOPERS</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="img/w.jpeg" alt="Chicago" style="width:100%;" id="pik">
+            <div class="carousel-caption">
+              <h3>GAME CITY</h3>
+              <p>GAME CITY DEVELOPERS</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <img src="img/w.jpeg" alt="New York" style="width:100%;" id="pik">
+            <div class="carousel-caption">
+              <h3> GAME CITY</h3>
+              <p>GAME CITY DEVELOPERS</p>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
+      </div>
   </div>
-</div>
-<br><br><br>
-<h4><strong><u>ABOUT</u></strong></h4>
-<strong><p id="mike">Game City is a global leader in mobile entertainment, providing social gaming experiences for millions<br> of players around the world.
-
-Game City is the creative powerhouse behind some of<br> the highest grossing and most enduring social gaming franchises for mobile, <br>including Cookie Jam (a Facebook “Game of the Year” winner) and Panda Pop.
-
-<br>Game City is the go-to studio for Hollywood, having developed immersive,<br> narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family Guy<br>Jam City’s diverse and multi-faceted team is known for its creative<br> excellence and technological innovation in areas including storytelling,<br> data science and consumer insights.</p></strong>
-
-<div class="row"id="sum">
-  <div class="col-ms-4">
-  <img src="img/dev1.jpeg">
-  <img src="img/dev2.jpeg">
-  <img src="img/dev4.jpeg">
-  <p>our developers</p>
   </div>
-</div>
-<br><br>
-<h id="sik"><u/>YOU CAN FIND US ON ;</u></h>
-<div col-ms-12 id="cup">
-  <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-  <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-<a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"></i></a>
-  <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-</div>
-  </body>
+  </div>
+  <div class="container" id="nop">
+    <div class="row">
+      <div class="col-md-8">
+        <h4><strong>ABOUT</strong></h4>
+        <p id="mike">Game City is a global leader in mobile entertainment, providing social gaming experiences for millions<br> of players around the world. Game City is the creative powerhouse behind some of<br> the highest grossing and most enduring social gaming
+          franchises for mobile, <br>including Cookie Jam (a Facebook “Game of the Year” winner) and Panda Pop.
+
+          <br>Game City is the go-to studio for Hollywood, having developed immersive,<br> narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family Guy<br>Game City’s diverse and multi-faceted team is known for its
+          creative
+          <br> excellence and technological innovation in areas including storytelling,<br> data science and consumer insights.</p>
+
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row" id="sum">
+    <div class="col-ms-4">
+      <img src="img/dev1.jpeg">
+      <img src="img/dev2.jpeg">
+      <img src="img/dev4.jpeg">
+      <p>our developers</p>
+    </div>
+  </div>
+  <br><br>
+  <div class="jumbotron" id="lip">
+    <h6 id="komo">GAMECITY</h6>
+    <h id="sik">YOU CAN FIND US ON :</h>
+
+    <div col-ms-12 id="cup">
+      <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"></i></a>
+      <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+      <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+      <a href="https://www.apple.com" target="_blank"><i class="fab fa-apple"></i></a>
+      <p id="sit">© 2018 Game City, Inc. Game CITY® and the Game CITY Logo are registered and/or <br>unregistered trademarks of Game City, Inc. | Privacy Policy | Terms Of Service</p>
+    </div>
+  </div>
+</body>
+
 </html>
