--- a/game2.html
+++ b/game2.html
@@ -179,6 +179,45 @@ AVAILABLE NOW</h2>
       </div>
       <div class="col-md-1"><img src="img/portkey.jpg" alt="portkey"></div>
     </div>
+    <footer>
+      <div class="container-fluid padding">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <img src="img/logo.png">
+            <hr class="light">
+            <p>555-555-55555</p>
+            <p>gamecity@gmail.com</p>
+            <p>100 Nairobi</p>
+            <p>Ngong, Nairobi, 001000</p>
+
+          </div>
+          <div class="col-md-4">
+            <hr class="light">
+            <h5>Our Partners</h5>
+            <hr class="light">
+            <p>Google Playstore</p>
+            <p>Apple Appstore</p>
+            <p>Windows Phone Store</p>
+
+          </div>
+          <div class="col-md-4">
+            <hr class="light">
+            <h5>Supported Platforms</h5>
+            <hr class="light">
+            <p>Android</p>
+            <p>iOS</p>
+            <p>Windows Phone</p>
+
+          </div>
+          <div class="col-12">
+            <hr class="light">
+            <h5>&copy; emdeechege</h5>
+
+          </div>
+        </div>
+
+      </div>
+    </footer>
   </div>
 </body>
 
