--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 	<!--- Jumbotron Games Header -->
 	<div class="container-fluid">
-		<div class="row jumbotron">
+		<div id="jumbotronGames" class="row jumbotron">
 			<div class="col-sm-12">
 				<h1 id="heading1">GAMES</h1>
 
@@ -168,7 +168,7 @@
 	</div>
 
 	<div class="container-fluid">
-		<div class="row jumbotron">
+		<div id="jumbotronNew" class="row jumbotron">
 			<div class="col-sm-12">
 				<h1 id="heading1">UPCOMING GAMES</h1>
 
@@ -204,7 +204,7 @@
 	<div id="support" class="row">
 
 		<div class="col-md-6">
-			<div class="jumbotron">
+			<div  class="jumbotron">
 				<h2>Report a problem</h2>
 				<form id="complaint">
 					<div class="form-group">
@@ -222,7 +222,7 @@
 
 
 		<div class="col-md-6">
-			<div class="jumbotron">
+			<div id="jumboFeedback" class="jumbotron">
 				<h2>Subscribe for new games</h2>
 				<form id="subscribe">
 					<div class="form-group">
