--- a/game2.html
+++ b/game2.html
@@ -69,10 +69,10 @@
 AVAILABLE NOW</h2>
       <p align="center"><a href="https://itunes.apple.com/nz/app/harry-potter-hogwarts-mystery/id1333256716">
         <img src="img/applestore.jpg" alt="download on apple store" align="center" ></a><a href="https://play.google.com/store/apps/details?id=com.tinyco.potter&referrer=adjust_reftag%3DcZSsvAzHp2tKu%26utm_source%3DWebsite%26utm_campaign%3DJam_City%26utm_content%3Dunknown%26utm_term%3Dandroid_icon"><img src="img/googleplaystore.jpg" alt="download on google play store" align="center"></a></p>
-
-      <form class="form" method="POST" action="https://formspree.io/emdeechege@gmail.com">
-        <p align="center"> Sign up here <input type="text" name="email" value="" align="center">
-          <button>SUBMIT</button></p>
+      <form method="POST" action="https://formspree.io/emdeechege@gmail.com">
+        <p align="center"> Sign up here <input type="email" name="email" placeholder="Your email">
+          <button type="submit">SUBMIT</button>
+        </p>
       </form>
       <p id="small" align="center">You've been invited to receive news and updates about the Harry Potter: Hogwarts Mystery mobile game up to and beyond the release.
       </p>
