edit background image

--- a/game3.html
+++ b/game3.html
@@ -12,7 +12,46 @@
 </head>
 
 <body>
-  <nav></nav>
+  <!-- Navigation -->
+	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+	<span class="navbar-toggler-icon"></span>
+</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">Home</a>
+					</li>
+					<li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Games
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="game3.html">Angry Birds</a>
+          <a class="dropdown-item" href="game2.html">Harry Potter</a>
+          <a class="dropdown-item" href="game1.html">Fifa 18</a>
+					<a class="dropdown-item" href="#">Word Cross</a>
+					<a class="dropdown-item" href="#">Subway Surfers</a>
+					<a class="dropdown-item" href="#">Clash Royale</a>
+					<a class="dropdown-item" href="#">Nba2K18</a>
+					<a class="dropdown-item" href="#">8 Ball Pool</a>
+
+        </div>
+      </li>
+					<li class="nav-item">
+						<a class="nav-link" href="about.html">About Us</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Support</a>
+					</li>
+
+				</ul>
+
+			</div>
+		</div>
+	</nav>
   <div class="top-image">
     <div class="container">
       <div class="row">
@@ -52,8 +91,12 @@
           <a href="https://crackberry.com/tag/angry-birds-blackberry" target="_blank"><img src="img/bb.png" alt=""></a>
 
         </div>
-        <div class="row">
+        <br>
+        <br>
+        <br>
+        <hr>
 
+        <div class="row">
           <div class="col-md-9" style="margin:0 auto;">
             <h3>GAME SCREENSHOTS</h3>
             <div id="demo" class="carousel slide" data-ride="carousel">
@@ -104,7 +147,7 @@
           </div>
         </div>
 
-
+<br>
         <div class="row" id="third-row">
           <div class="col-md-5">
             <h3>Features</h3>
@@ -116,7 +159,7 @@
             </ul>
           </div>
           <div class="col-md-7 content">
-            <h2>VIDEO</h2>
+            <h3>ANGRY BIRDS 2 TRAILER</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
@@ -124,6 +167,47 @@
 
 
     </div>
+    <br>
+    <!--- Footer -->
+    <footer id="g3-footer">
+      <div class="container-fluid padding">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <img src="img/logo.png">
+            <hr class="light">
+            <p>555-555-55555</p>
+            <p>gamecity@gmail.com</p>
+            <p>100 Nairobi</p>
+            <p>Ngong, Nairobi, 001000</p>
+
+          </div>
+          <div class="col-md-4">
+            <hr class="light">
+            <h5>Our Partners</h5>
+            <hr class="light">
+            <p>Google Playstore</p>
+            <p>Apple Appstore</p>
+            <p>Windows Phone Store</p>
+
+          </div>
+          <div class="col-md-4">
+            <hr class="light">
+            <h5>Supported Platforms</h5>
+            <hr class="light">
+            <p>Android</p>
+            <p>iOS</p>
+            <p>Windows Phone</p>
+
+          </div>
+          <div class="col-12">
+            <hr class="light">
+            <h5>&copy; cherucole</h5>
+
+          </div>
+        </div>
+
+      </div>
+    </footer>
     <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
