formatting page footer

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 	</div>
 
 	<!--- Two Column Section User feeback -->
-	<div id="support" class="row">
+	<div id="support" class="row feedback">
 
 		<div class="col-md-6">
 			<div  class="jumbotron">
@@ -267,7 +267,7 @@
 			</div>
 			<div class="col-12 social padding">
 				<a href="#"><i class="fab fa-facebook"></i></a>
-				<a href="#"><i class="fab fa-twitter"></i></a>
+				<a href="https://twitter.com/cherucole"><i class="fab fa-twitter"></i></a>
 				<a href="#"><i class="fab fa-google-plus-g"></i></a>
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
