formatted icons to fit displays

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
 				</div>
 				<div class="col-12">
-					<hr class="light">
+					<hr class="light-100">
 					<h5>&copy; cherucole</h5>
 
 				</div>
