edit publishing section

--- a/game3.html
+++ b/game3.html
@@ -60,7 +60,7 @@
           <p>Play the Biggest mobile game of all time. Topple towers and pop pigs in tons of multi-stage levels, and test your skills against other players to earn handsome rewards in the Arena.</p>
           <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png" alt=""></a>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
           <img src="img/ab2_characters.png" alt="">
         </div>
       </div>
@@ -91,12 +91,10 @@
           <a href="https://crackberry.com/tag/angry-birds-blackberry" target="_blank"><img src="img/bb.png" alt=""></a>
 
         </div>
-        <br>
-        <br>
-        <br>
-        <hr>
+        </div>
 
-        <div class="row">
+<br>
+        <div class="row" id="samples">
           <div class="col-md-9" style="margin:0 auto;">
             <h3>GAME SCREENSHOTS</h3>
             <div id="demo" class="carousel slide" data-ride="carousel">
@@ -163,7 +161,7 @@
             <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
-      </div>
+
 
 
     </div>
