--- a/game3.html
+++ b/game3.html
@@ -199,7 +199,7 @@
           </div>
           <div class="col-12">
             <hr class="light">
-            <h5>&copy; cherucole</h5>
+            <h5>&copy; TonyKioko</h5>
 
           </div>
         </div>
