--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
+	<nav class="navbar navbar-expand-md navbar-light  fixed-top" style="background-color: #e3f2fd;">
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
