--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Game Landing Page</title>
@@ -58,7 +59,7 @@
 	</nav>
 	<br>
 	<br>
-	<br>
+
 
 	<!--- Image Carousel -->
 	<div id="slides" class="carousel slide" data-ride="carousel">
@@ -263,7 +264,7 @@
 	<div class="container-fluid padding">
 		<div class="row text-center padding">
 			<div class="col-12">
-				<h2>Connect</h2>
+				<h3>Connect with us</h3>
 			</div>
 			<div class="col-12 social padding">
 				<a href="#"><i class="fab fa-facebook"></i></a>
