--- a/index.html
+++ b/index.html
@@ -113,15 +113,9 @@
 	</div>
 
 	<!--- Jumbotron Games Header -->
-	<div class="container-fluid">
-		<div id="jumbotronGames" class="row jumbotron">
-			<div class="col-sm-12">
-				<h1 id="heading1">GAMES</h1>
-
-			</div>
-		</div>
-
-	</div>
+	<hr class="light">
+	<h1 id="heading1" style="color:white;" >GAMES</h1>
+	<hr class="light">
 
 
 	<!--- Three Column Section Games  -->
@@ -168,15 +162,9 @@
 
 	</div>
 
-	<div class="container-fluid">
-		<div id="jumbotronNew" class="row jumbotron">
-			<div class="col-sm-12">
-				<h1 id="heading1">UPCOMING GAMES</h1>
-
-			</div>
-		</div>
-
-	</div>
+	<hr class="light">
+	<h1 id="heading1" style="color:white;" >UPCOMING GAMES</h1>
+	<hr class="light">
 
 	<div class="container-fluid padding">
 		<div class="row text-center padding">
