formatted social media icons

--- a/index.html
+++ b/index.html
@@ -230,8 +230,6 @@
 
 	</div>
 
-	<hr class="my-4">
-
 
 	<!--- Fixed background -->
 
@@ -255,11 +253,14 @@
 				<h3>Connect with us</h3>
 			</div>
 			<div class="col-12 social padding">
+				<hr class="light">
 				<a href="#"><i class="fab fa-facebook"></i></a>
 				<a href="https://twitter.com/cherucole"><i class="fab fa-twitter"></i></a>
 				<a href="#"><i class="fab fa-google-plus-g"></i></a>
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
+				<hr class="light">
+
 
 			</div>
 		</div>
