--- a/about.html
+++ b/about.html
@@ -10,42 +10,46 @@
   <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <link href="about.css" rel="stylesheet" type="text/css">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top"id="pit">
-  <div class="container-fluid">
-    <div class="navbar-header"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">GAME CITY</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Games <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-          <li>  <a class="dropdown-item" href="game3.html">Angry Birds</a></li>
-          <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
-         <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
-         <li> <a class="dropdown-item" href="game1.html">Fifa 18</a></li>
-         <li> <a class="dropdown-item" href="#">Word Cross</a></li>
-         <li> <a class="dropdown-item" href="#">Subway Surfers</a></li>
-         <li> <a class="dropdown-item" href="#">Clash Royale</a></li>
-         <li> <a class="dropdown-item" href="#">Nba2K18</a></li>
-         <li> <a class="dropdown-item" href="#">8 Ball Pool</a></li>
 
-      </ul>
-      <li><a href="about.html">About us</a></li>
-              <li><a href="#">Support</a></li>
+  <nav class="navbar navbar-default navbar-fixed-top" id="pit">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        </span>
+        <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+          <h>GAME CITY
+            </a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Games <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li> <a class="dropdown-item" href="game3.html">Angry Birds</a></li>
+              <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
+              <li> <a class="dropdown-item" href="game2.html">Harry Potter</a></li>
+              <li> <a class="dropdown-item" href="game1.html">Fifa 18</a></li>
+              <li> <a class="dropdown-item" href="#">Word Cross</a></li>
+              <li> <a class="dropdown-item" href="#">Subway Surfers</a></li>
+              <li> <a class="dropdown-item" href="#">Clash Royale</a></li>
+              <li> <a class="dropdown-item" href="#">Nba2K18</a></li>
+              <li> <a class="dropdown-item" href="#">8 Ball Pool</a></li>
+
+            </ul>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="#">Support</a></li>
+      </div>
     </div>
-  </div>
-</nav>
-<br><br>
+  </nav>
+  <br><br>
   <div class="jumbotron" id="dip">
     <background-image: url( "t.png");>
       <h1 id="komo">WHO WE ARE</h1>
@@ -90,58 +94,90 @@
         </div>
 
         <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
         <a class="right carousel-control" href="#myCarousel" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
-    </a>
+    </a> -->
       </div>
   </div>
-  </div>
-  </div>
-  <div class="container" id="nop">
-    <div class="row">
-      <div class="col-md-8">
-        <h4><strong>ABOUT</strong></h4>
-        <p id="mike">Game City is a global leader in mobile entertainment, providing social gaming experiences for millions<br> of players around the world. Game City is the creative powerhouse behind some of<br> the highest grossing and most enduring social gaming
-          franchises for mobile, <br>including Cookie Jam (a Facebook “Game of the Year” winner) and Panda Pop.
 
-          <br>Game City is the go-to studio for Hollywood, having developed immersive,<br> narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family Guy<br>Game City’s diverse and multi-faceted team is known for its
-          creative
-          <br> excellence and technological innovation in areas including storytelling,<br> data science and consumer insights.</p>
+  </div>
+<div class="container">
+  <!-- <div class="col-md-8"> -->
+    <h4><strong>ABOUT</strong></h4>
+    <p id="mike">Game City is a global leader in mobile entertainment, providing social gaming experiences for millions of players around the world. Game City is the creative powerhouse behind some of the highest grossing and most enduring social gaming franchises
+      for mobile, including Cookie Jam (a Facebook “Game of the Year” winner) and Pand.Game City is the go-to studio for Hollywood, having developed immersive narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family Guy Game City’s diverse and multi-faceted team is known for its creative
+       excellence and technological innovation in areas including storytelling, data science and consumer insights.</p>
+  </div>
+<!-- </div> -->
 
+<br><br><br>
+  <div class="row"id="mit">
+
+    <div class="col-ms-5">
+      <div class="flex-container">
+      <div class="w3-card-4"id="mit">
+  <img src="img/dev1.jpeg" alt="Norway">
+  <div class="w3-container w3-center">
+    <p id="mit">NAME:Collins Cheruiyot<br>
+      GITHUB:<link https://github.com/cherucole><br>
+      EXPERIENCE:1 MONTH<br>
+      CAREER:web developer<br>
+      Position:C.E.O
+
+    </p>
+  </div>
+</div>
+
+<div class="w3-card-4">
+  <img src="img/dev1.jpeg" alt="Norway">
+  <div class="w3-container w3-center">
+    <p id="mit">NAME:Tom Chege<br>GITHUB:https://github.com/Tom<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
+  </div>
+</div>
+<div class="w3-card-4">
+  <img src="img/dev1.jpeg" alt="Norway">
+  <div class="w3-container w3-center">
+    <p id="mit">NAME:Tonny Kioko<br>GITHUB:https://github.com/Tonny<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
+  </div>
+</div>
+<div class="w3-card-4">
+<img src="img/dev1.jpeg" alt="Norway">
+<div class="w3-container w3-center">
+<p id="mit">NAME:Michael Karanja<br>GITHUB:https://github.com/Kinuthia<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
+</div>
+</div>
+<div class="w3-card-4">
+<img src="img/dev1.jpeg" alt="Norway">
+<div class="w3-container w3-center">
+<p id="mit">NAME:Tonny Muchui<br>GITHUB:https://github.com/Tonny<br>EXPERIENCE:1 MONTH<br>CAREER:web developer</p>
+</div>
+</div>
+</div>
+  </div>
+    </div>
+
+    <div class="jumbotron" id="lip">
+      <h6 id="komo">GAMECITY</h6>
+      <h id="sik">YOU CAN FIND US ON :</h>
+
+      <div col-ms-12 id="cup">
+        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"id="dep"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"id="dap"></i></a>
+        <a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"id="dip"></i></a>
+        <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"id="pip"></i></a>
+        <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"id="nit"></i></a>
+        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"id="vip"></i></a>
+        <a href="https://www.apple.com" target="_blank"><i class="fab fa-apple"id="git"></i></a>
+        <p id="sit">© 2018 Game City, Inc. Game CITY® and the Game CITY Logo are registered and/or <br>unregistered trademarks of Game City, Inc. | Privacy Policy | Terms Of Service</p>
       </div>
     </div>
   </div>
 
-
-  <div class="row" id="sum">
-    <div class="col-ms-4">
-      <img src="img/dev1.jpeg">
-      <img src="img/dev2.jpeg">
-      <img src="img/dev4.jpeg">
-      <p>our developers</p>
-    </div>
-  </div>
-  <br><br>
-  <div class="jumbotron" id="lip">
-    <h6 id="komo">GAMECITY</h6>
-    <h id="sik">YOU CAN FIND US ON :</h>
-
-    <div col-ms-12 id="cup">
-      <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-      <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"></i></a>
-      <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
-      <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.apple.com" target="_blank"><i class="fab fa-apple"></i></a>
-      <p id="sit">© 2018 Game City, Inc. Game CITY® and the Game CITY Logo are registered and/or <br>unregistered trademarks of Game City, Inc. | Privacy Policy | Terms Of Service</p>
-    </div>
-  </div>
 </body>
 
 </html>
