--- a/privacy.html
+++ b/privacy.html
@@ -12,9 +12,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<script src="js/scripts.js" type="text/javascript">
-
-	</script>
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -63,102 +60,17 @@
 	<br>
 	<br>
 
-
-	<!--- Image Carousel -->
-	<div id="slides" class="carousel slide" data-ride="carousel">
-		<ol class="carousel-indicators">
-			<li data-target="#slides" data-slide-to="0" class="active"></li>
-			<li data-target="#slides" data-slide-to="1"></li>
-			<li data-target="#slides" data-slide-to="2"></li>
-			<li data-target="#slides" data-slide-to="3"></li>
-			<li data-target="#slides" data-slide-to="4"></li>
-			<li data-target="#slides" data-slide-to="5"></li>
-			<li data-target="#slides" data-slide-to="6"></li>
-
-		</ol>
-		<div class="carousel-inner" role="listbox">
-			<div class="carousel-item active">
-				<a href="game3.html">
-	      <img class="d-block img-fluid" src="img/carousel/bannerab.jpg" alt="First slide" style="width:100%;">
-			</a>
-
-			</div>
-			<div class="carousel-item">
-				<a href="game1.html">
-				<img class="d-block img-fluid" src="img/carousel/bannerfifa.jpg" alt="Second slide" style="width:100%;">
-				</a>
-			</div>
-			<div class="carousel-item">
-				<img class="d-block img-fluid" src="img/carousel/bannersubway.jpg" alt="Third slide" style="width:100%;">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block img-fluid" src="img/carousel/banner2k.png" alt="Third slide" style="width:100%;">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block img-fluid" src="img/carousel/bannerdrag.jpg" alt="Third slide" style="width:100%;">
-			</div>
-			<div class="carousel-item">
-				<img class="d-block img-fluid" src="img/carousel/bannerclash.jpg" alt="Third slide" style="width:100%;">
-			</div>
-			<div class="carousel-item">
-				<a href="game2.html">
-				<img class="d-block img-fluid" src="img/carousel/bannerhp.png" alt="Third slide" style="width:100%;">
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
-	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-		<a class="carousel-control-next" href="#slides" role="button" data-slide="next">
-	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	</div>
-
 	<!--- Jumbotron Games Header -->
 	<hr class="light">
-	<h1 id="heading1" style="color:white;" >GAMES</h1>
+	<h1 id="heading1" style="color:white;">Privacy Policy</h1>
 	<hr class="light">
 
 
 	<!--- Three Column Section Games  -->
-	<div class="container-fluid padding">
-		<div class="row text-center padding">
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/ab.png">
-				<h3>Angry Birds</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/fifa.png">
-				<h3>Fifa</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/hp.png">
-				<h3>Harry Potter</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/2k.png">
-				<h3>NBA 2k18</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/word.png">
-				<h3>Word Cross</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/cc.png">
-				<h3>Candy Crush</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/cr.png">
-				<h3>Clash Royale</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/sub.png">
-				<h3>Subway Surfers</h3>
-			</div>
-			<div class="col-xs-12 col-sm-6 col-md-4">
-				<img src="img/icons/pool.png">
-				<h3>8 Ball Pool</h3>
+	<div class="container padding">
+		<dipv class="row text-center padding">
+			<div class="col-md-12">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 			</div>
 		</div>
 		<hr class="my-4">
@@ -207,7 +119,7 @@
 						<label for="Email">Message</label>
 						<input style="width:60%;" type="text" class="form-control" id="message" placeholder="Game name & issue">
 					</div>
-					<button id="submit" type="submit" class="btn btn-success">Submit</button>
+					<button type="submit" class="btn btn-success">Submit</button>
 				</form>
 			</div>
 		</div>
